--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
     </header>
 
     <main>
-      <section id="whoWeAre" data-section="1.whoWeAre.html"></section>
-      <section id="ourServices" data-section="2.ourServices.html"></section>
-      <section id="portfolio" data-section="3.portfolio.html"></section>
-      <section id="location" data-section="4.location.html"></section>
+      <section id="whoWeAre" data-section="main/1.whoWeAre.html"></section>
+      <section id="ourServices" data-section="main/2.ourServices.html"></section>
+      <section id="portfolio" data-section="main/3.portfolio.html"></section>
+      <section id="location" data-section="main/4.location.html"></section>
+      <section id="contactus" data-section="main/5.contactUs.html"></section>
+
     </main>
     <footer class="footer">
       <a href="https://www.salleurl.edu/es" target="_blank">
