--- a/main/2.ourServices.html
+++ b/main/2.ourServices.html
@@ -1,4 +1,4 @@
-<section id="ourServices" class="mt-5 mb-5">
+<section id="ourServices" class="py-5">
     <h2>Our services</h2>
     <div
       class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mt-5 ourServices"
@@ -14,7 +14,7 @@
       </article>
 
       <article id="service2">
-        <i class="fa-solid fa-code fa-beat"></i>
+        <i class="fa-solid fa-code"></i>
         <h3>Service 2</h3>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit.Quaerat
